<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Theme.ChatterBox.AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".register.RegisterActivity">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="21dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/signup_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backArrow" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/signup_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout_loginWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/login_tv">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/twitter_logo" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:src="@drawable/google_logo" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/apple_logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_OR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_loginWith">

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:background="@drawable/line" />

        <TextView
            style="@style/Theme.ChatterBox.NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/or" />

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:background="@drawable/line" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_OR">


        <EditText
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/your_email"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@+id/username_layout">


        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@+id/email_layout">


        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@+id/password_layout">


        <EditText
            android:id="@+id/confirm_password_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_shape"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/signup_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/do_you_have_an_account_sign_in"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>