<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.chatterbox.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        style="@style/Theme.ChatterBox.AppBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="185dp"
            android:layout_height="21dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backArrow" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <LinearLayout
            android:id="@+id/linearLayout_loginWith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/login_tv">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/twitter_logo" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="24dp"
                android:src="@drawable/google_logo" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/apple_logo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_OR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_loginWith">

            <View
                android:layout_width="160dp"
                android:layout_height="1dp"
                android:background="@drawable/line" />

            <TextView
                style="@style/Theme.ChatterBox.NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/or" />

            <View
                android:layout_width="160dp"
                android:layout_height="1dp"
                android:background="@drawable/line" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLogin_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/your_email"
            android:textColorHint="@color/gray"
            app:Error="@{vm.emailError}"
            app:boxStrokeColor="@color/primaryColor"
            app:cursorColor="@color/primaryColor"
            app:cursorErrorColor="@color/design_default_color_error"
            app:hintTextColor="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_OR">


            <EditText
                android:id="@+id/emailLogin_edt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@={vm.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogin_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            app:Error="@{vm.passwordError}"
            app:boxStrokeColor="@color/primaryColor"
            app:cursorColor="@color/primaryColor"
            app:cursorErrorColor="@color/design_default_color_error"
            app:hintTextColor="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@+id/emailLogin_layout">


            <EditText
                android:id="@+id/passwordLogin_edt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@={vm.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/btn_shape"
            android:onClick="@{()->vm.login()}"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLogin_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="@{vm.isLoading?View.GONE:View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:visibility="@{vm.isLoading?View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:onClick="@{()->vm.navigateToRegisterActivity()}"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/primaryColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>