<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.chatterbox.ui.onboarding.OnboardingViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/onboarding"
        tools:context=".ui.onboarding.OnboardingActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="6">

            <LinearLayout
                android:id="@+id/linearLayout_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_black"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="24dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/onboarding_text1"
                    android:textColor="@color/white"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/onboarding_text_2"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_loginWith"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="3">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/twitter_bb_logo" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="24dp"
                    android:src="@drawable/google_bb_logo" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/apple_bb_logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_OR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <View
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:background="@drawable/line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/roboto_thin"
                    android:text="OR"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:background="@drawable/line" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/singup_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:background="@drawable/onboarding_btn"
                android:onClick="@{()->vm.navigateToRegister()}"
                android:paddingVertical="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/sign_up_withn_mail_onboarding_btn"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/black"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:fontFamily="@font/poppins_regular"
                android:onClick="@{()->vm.navigateToLogin()}"
                android:text="@string/existing_account_log_in"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>